# SLAM-for-retinal-surgery-in-Blender

./: README.md
slam-for-retinal-surgery/Code and resources/Code and Simulation/: My_codes.py  localization.py  movements.py  test.py
slam-for-retinal-surgery/PPT/: kick off pre
slam-for-retinal-surgery/catkin_ws/: test.cpp  test1.cpp
slam-for-retinal-surgery/catkin_ws/src/mapping/: CMakeLists.txt  package.xml
slam-for-retinal-surgery/catkin_ws/src/mapping/src/: mapping.py  test.py
slam-for-retinal-surgery/catkin_ws/src/my_pcl_tutorial/: CMakeLists.txt  package.xml
slam-for-retinal-surgery/catkin_ws/src/my_pcl_tutorial/src/: mapping.cpp
slam-for-retinal-surgery/catkin_ws/src/using_markers/: CMakeLists.txt  package.xml
slam-for-retinal-surgery/catkin_ws/src/using_markers/src/: points_and_lines.cpp
slam-for-retinal-surgery/dataset/: center.txt  center_slides.txt  center_square_100.txt  real_positions.txt
slam-for-retinal-surgery/dataset/results_shit/: center.txt  center_dist.txt  prediction.txt  real_positions.txt
